--- a/package.json
+++ b/package.json
@@ -22,21 +22,23 @@
     "@ionic-native/core": "~4.15.0",
     "@ionic-native/diagnostic": "^4.15.0",
     "@ionic-native/geolocation": "^4.15.0",
+    "@ionic-native/open-native-settings": "^4.15.0",
     "@ionic-native/splash-screen": "~4.15.0",
     "@ionic-native/status-bar": "~4.15.0",
     "@ionic/pro": "2.0.3",
     "@ionic/storage": "2.2.0",
     "cordova-android": "7.1.1",
+    "cordova-open-native-settings": "^1.5.1",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-geolocation": "4.0.1",
+    "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.2.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova.plugins.diagnostic": "4.0.10",
+    "cordova.plugins.diagnostic": "^4.0.10",
     "ionic-angular": "3.9.2",
-    "ionicons": "3.0.0",
+    "ionicons": "4.4.4",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
@@ -60,7 +62,8 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-geolocation": {
         "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
-      }
+      },
+      "cordova-open-native-settings": {}
     },
     "platforms": [
       "android"
