--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ionic-native/core": "~4.15.0",
     "@ionic-native/diagnostic": "^4.15.0",
     "@ionic-native/geolocation": "^4.15.0",
+    "@ionic-native/location-accuracy": "^4.15.0",
     "@ionic-native/open-native-settings": "^4.15.0",
     "@ionic-native/splash-screen": "~4.15.0",
     "@ionic-native/status-bar": "~4.15.0",
@@ -33,6 +34,7 @@
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.2.0",
+    "cordova-plugin-request-location-accuracy": "^2.2.3",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -63,7 +65,8 @@
       "cordova-plugin-geolocation": {
         "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
       },
-      "cordova-open-native-settings": {}
+      "cordova-open-native-settings": {},
+      "cordova-plugin-request-location-accuracy": {}
     },
     "platforms": [
       "android"
