--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ionic-native/core": "~4.15.0",
     "@ionic-native/diagnostic": "^4.15.0",
     "@ionic-native/geolocation": "^4.15.0",
+    "@ionic-native/insomnia": "^4.16.0",
     "@ionic-native/location-accuracy": "^4.15.0",
     "@ionic-native/open-native-settings": "^4.15.0",
     "@ionic-native/splash-screen": "~4.15.0",
@@ -32,6 +33,7 @@
     "cordova-open-native-settings": "^1.5.1",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-geolocation": "^4.0.1",
+    "cordova-plugin-insomnia": "4.3.0",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.2.0",
     "cordova-plugin-request-location-accuracy": "^2.2.3",
@@ -66,7 +68,8 @@
         "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
       },
       "cordova-open-native-settings": {},
-      "cordova-plugin-request-location-accuracy": {}
+      "cordova-plugin-request-location-accuracy": {},
+      "cordova-plugin-insomnia": {}
     },
     "platforms": [
       "android"
