--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cordova.plugins.diagnostic": "^4.0.10",
     "ionic-angular": "3.9.2",
     "ionicons": "4.4.4",
+    "leaflet": "^1.3.4",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
