--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/location-accuracy": "^4.15.0",
     "@ionic-native/open-native-settings": "^4.15.0",
     "@ionic-native/splash-screen": "~4.15.0",
+    "@ionic-native/sqlite": "^4.16.0",
     "@ionic-native/status-bar": "~4.15.0",
     "@ionic/pro": "2.0.3",
     "@ionic/storage": "2.2.0",
@@ -40,6 +41,7 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-sqlite-storage": "^2.5.0",
     "cordova.plugins.diagnostic": "^4.0.10",
     "ionic-angular": "3.9.2",
     "ionicons": "4.4.4",
@@ -70,7 +72,8 @@
       },
       "cordova-open-native-settings": {},
       "cordova-plugin-request-location-accuracy": {},
-      "cordova-plugin-insomnia": {}
+      "cordova-plugin-insomnia": {},
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "android"
