--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@ionic-native/sqlite": "^4.16.0",
     "@ionic-native/status-bar": "~4.15.0",
     "@ionic/pro": "2.0.3",
-    "@ionic/storage": "2.2.0",
     "cordova-android": "7.1.1",
     "cordova-open-native-settings": "^1.5.1",
     "cordova-plugin-device": "^2.0.2",
@@ -41,7 +40,6 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-sqlite-storage": "^2.5.0",
     "cordova.plugins.diagnostic": "^4.0.10",
     "ionic-angular": "3.9.2",
     "ionicons": "4.4.4",
@@ -72,8 +70,7 @@
       },
       "cordova-open-native-settings": {},
       "cordova-plugin-request-location-accuracy": {},
-      "cordova-plugin-insomnia": {},
-      "cordova-sqlite-storage": {}
+      "cordova-plugin-insomnia": {}
     },
     "platforms": [
       "android"
