--- a/package.json
+++ b/package.json
@@ -40,10 +40,13 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-sqlite-storage": "2.5.0",
     "cordova.plugins.diagnostic": "^4.0.10",
     "ionic-angular": "3.9.2",
     "ionicons": "4.4.4",
     "leaflet": "^1.3.4",
+    "leaflet-omnivore": "^0.3.4",
+    "mapbox": "^1.0.0-beta10",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
@@ -70,7 +73,8 @@
       },
       "cordova-open-native-settings": {},
       "cordova-plugin-request-location-accuracy": {},
-      "cordova-plugin-insomnia": {}
+      "cordova-plugin-insomnia": {},
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "android"
