--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "ionic-angular": "3.9.2",
     "ionicons": "4.4.4",
     "leaflet": "^1.3.4",
+    "moment-jalaali": "^0.8.1",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
